# graph-unified

./: .env.example  .gitignore  DOCUMENTATION_SUMMARY.md  DOTENV_IMPLEMENTATION.md  ENHANCEMENTS_SUMMARY.md  ENTITY_CHUNK_INDEX.md  ENV_SETUP_GUIDE.md  HIPPORAG_PHASE1_REVIEW.md  IMPLEMENTATION_SUMMARY.md  INDEXING_ARCHITECTURE.md  LOCAL_EMBEDDINGS_GUIDE.md  PHASE1.5_PROGRESS.md  PHASE1_COMPLETE.md  PHASE1_EXPERT_REVIEWS.md  PHASE2.5_COMPLETE.md  PHASE2_CHECKLIST.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE_3_5_FIX_PLAN.md  QUICK_REFERENCE.md  README.md  README_ENTITY_CHUNK_INDEX.md  example_entity_lookup.py  pyproject.toml  requirements.txt  settings-dev.yaml  settings-local-embeddings.yaml  settings-phase2-test.yaml  settings-prod.yaml  settings-research.yaml  test_entity_chunk_index.py  test_graphrag_global.py  test_graphrag_global_output.txt  test_graphrag_local.py  test_graphrag_local_output.txt  test_hipporag.py  test_hipporag_output.txt  test_hybrid_output.txt  test_hybrid_rag.py  (+11 more)
.claude/agent-memory/graphrag-expert/: MEMORY.md  configuration-patterns.md  phase2-review.md  phase3-week2-enhancements.md  phase3-week2-review.md  troubleshooting.md  unified-integration.md
.claude/agent-memory/hipporag-expert/: MEMORY.md  activation-retrieval.md  unified-system-patterns.md
.claude/agents/: data-pipeline-expert.md  dev-progress-facilitator.md  graphrag-expert.md  hipporag-expert.md  lightrag-expert.md  ml-evaluation-expert.md  mlops-expert.md  prompt-engineering-expert.md  rag-architecture-expert.md
docs/: README.md
docs/design/: ARCHITECTURE.md
docs/explanation/: 01-why-unified-rag.md  02-understanding-retrieval-strategies.md  03-cost-quality-tradeoffs.md
docs/how-to/: 01-prompt-tuning.md
docs/reference/: cli-reference.md  configuration-reference.md
docs/specifications/: 01-data-schemas.md  02-api-specification.md  03-module-architecture.md  04-storage-formats.md  05-indexing-pipeline-spec.md  06-retrieval-pipeline-spec.md  07-testing-spec.md  08-configuration-spec.md  09-cli-spec.md  10-prompt-templates-spec.md  README.md
docs/tutorial/: 01-getting-started.md
examples/: query_router_example.py
graphunified/: __init__.py  __main__.py  __version__.py  cli.py  exceptions.py
graphunified/config/: __init__.py  defaults.py  models.py  settings.py  validation.py
graphunified/index/: __init__.py  pipeline.py
graphunified/index/stages/: __init__.py  (+6 more)
graphunified/prompts/: __init__.py  extraction.py  query.py
graphunified/query/: __init__.py  classifier.py  executor.py  fusion.py  generator.py  router.py  selector.py
graphunified/storage/: __init__.py  base.py  graph_store.py  parquet_store.py  schemas.py  vector_store.py
graphunified/strategies/: __init__.py  base.py  graphrag_global.py  graphrag_local.py  hipporag.py  hybrid.py  lightrag.py  naive.py  utils.py
graphunified/utils/: __init__.py  embedding.py  embedding_factory.py  json_utils.py  llm.py  local_embedding.py  logging.py  tokenizer.py
test-corpus/: doc1.md  doc2.md  doc3.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py
(+21 files in other folders)
